Front page UI updated

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -17,22 +17,32 @@
         </div>
     </div>
 
+    <div class="tooltip" id="tooltip" style="display: none;"></div>
+
+    <div class="draggable-div" id="info" >
+        <div class="color-picker">
+            <input type="color" id="bgColor0" value="#444444">
+            <input type="color" id="textColor0" value="#08f34e">
+        </div>
+        <textarea name="infos" id="textinfo"></textarea>
+    </div>
+
     <!-- Draggable Divs -->
     <div class="draggable-div" id="draggable1">
         <div class="color-picker">
-            <input type="color" id="bgColor1" value="#444">
+            <input type="color" id="bgColor1" value="#444444">
             <input type="color" id="textColor1" value="#ffffff">
         </div>
-        Drag Me
+        <textarea name="infos" id="textinfo1">Drag Me</textarea>
     </div>
 
 
     <div class="draggable-div" id="draggable2" style=" left: 250px;">
         <div class="color-picker">
-            <input type="color" id="bgColor2" value="#444">
+            <input type="color" id="bgColor2" value="#444444">
             <input type="color" id="textColor2" value="#ffffff">
         </div>
-        Drag Me Too
+        <textarea name="infos" id="textinfo1">Drag Me Too</textarea>
     </div>
 
 
