--- a/public/home.css
+++ b/public/home.css
@@ -36,8 +36,24 @@
             color: #ffffff;
             cursor: move;
             position: absolute;
-            top: 200px;
+            top: 400px;
             left: 50px;
+        }
+        #info{
+            width: 500px;
+            height: 150px;
+            background-color: #444444;
+            border-radius: 10px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            color: #ffffff;
+            cursor: move;
+            position: absolute;
+            top: 200px;
+            left: 400px;
         }
         .color-picker {
             position: absolute;
@@ -52,3 +68,51 @@
             height: 100%;
             width: 20%;
         }
+        #info .color-picker {
+            position: absolute;
+            top: 0;
+            left: 2px;
+            display: flex;
+            border-radius: 50%;
+            height: 20%;
+            width: 30%;
+        }
+        #info .color-picker input{
+            border-radius: 50%;
+            height: 100%;
+            width: 20%;
+        }
+        #textinfo{
+            position: absolute;
+            top: 25%;
+            outline: none;
+            width: 90%;
+            height: 60%;
+            background-color: transparent;
+            color: #08f34e;
+            overflow: hidden;
+            border: none;
+        }
+        #textinfo1{
+            position: absolute;
+            top: 25%;
+            outline: none;
+            width: 90%;
+            height: 60%;
+            background-color: transparent;
+            color: #ffffff;
+            overflow: hidden;
+            border: none;
+        }
+        .tooltip {
+            position: absolute;
+            background-color: rgba(0, 0, 0, 0.7);
+            color: #ffffff;
+            padding: 5px;
+            border-radius: 4px;
+            font-size: 12px;
+            pointer-events: none; /* Prevents tooltip from interfering with mouse events */
+            z-index: 10; /* Ensures tooltip appears above other elements */
+            transition: opacity 0.3s ease;
+        }
+        
