--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ApnaPortfolio</title>
+    <title>MyPortfolio</title>
     <link rel="stylesheet" href="home.css">
 </head>
 <body>
 
     <!-- Navbar -->
     <div class="navbar">
-        <h2>ApnaPortfolio</h2>
+        <h2>MyPortfolio</h2>
         <div>
+            <a href="/">Home</a>
             <a href="/signin">Sign In</a>
             <a href="/signup">Sign Up</a>
         </div>
