--- a/views/userpage.ejs
+++ b/views/userpage.ejs
@@ -4,9 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MyPortfolio</title>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
-<link rel="stylesheet" href="userpage.css">
+    <link rel="stylesheet" href="userpage.css">
 </head>
 <body>
     <header>
@@ -16,10 +14,13 @@
         </nav>
     </header>
 
+    <input type="color" id="bgcolor">
     <main id="editor">
+        
         <!-- Dynamic fields will appear here -->
     </main>
 
+    <script src="https://cdn.jsdelivr.net/npm/interactjs@1.10.11/dist/interact.min.js"></script>
     <script src="userpage.js"></script>
 </body>
 </html>
