--- a/views/userpage.ejs
+++ b/views/userpage.ejs
@@ -11,12 +11,12 @@
         <nav>
             <button id="addText">Add Text Field</button>
             <button id="addImage">Add Image Field</button>
+            <button id="Savebtn">Save</button>
+            <input type="color" id="bgcolor">
         </nav>
     </header>
 
-    <input type="color" id="bgcolor">
     <main id="editor">
-        
         <!-- Dynamic fields will appear here -->
     </main>
 
