Protected Routes Made

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -90,6 +90,11 @@
             })
             document.getElementById('email').value=''
             document.getElementById('password').value=''
+            const result = await response.json();
+
+            if(result==='Done'){
+                window.location.href='/user'
+            }
         })
 
     </script>
