--- a/views/userpage.ejs
+++ b/views/userpage.ejs
@@ -12,6 +12,7 @@
             <button id="addText">Add Text Field</button>
             <button id="addImage">Add Image Field</button>
             <button id="Savebtn">Save</button>
+            <button id="logoutbtn">Logout</button>
             <input type="color" id="bgcolor">
         </nav>
     </header>
