ToolTip Added For All Element

--- a/views/userpage.ejs
+++ b/views/userpage.ejs
@@ -16,6 +16,7 @@
             <input type="color" id="bgcolor">
         </nav>
     </header>
+    <div class="tooltip" id="tooltip" style="display: none;"></div>
 
     <main id="editor" style="background-color: <%= css === 'No' ? '#ffffff' : css %>;">
         <% if (html === 'No') { %>
