--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,7 +13,7 @@
         <h2>MyPortfolio</h2>
         <div>
             <a href="/">Home</a>
-            <a href="/signin">Sign In</a>
+            <a href="/signin">Login</a>
             <a href="/signup">Sign Up</a>
         </div>
     </div>
