--- a/public/home.css
+++ b/public/home.css
@@ -179,4 +179,91 @@
             text-decoration: underline; /* Underline on hover */
             color: #08f34e; /* Change link color on hover */
         }
+        /* Responsive adjustments */
+@media (max-width: 768px) {
+    .navbar, .footer, .draggable-div, #info {
+        display: none;
+    }
+    .smallscreen{
+        position: absolute;
+        display: block !important;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        width: 100%;
+        height: 100%;
+        background-color: black;
+        z-index: 1000;
+    }
+    .smallscreen p{
+        text-align: center;
+        font-size: 20px;
+    }
+    .emoji{
+        margin-left: 35%;
+    }
+    .game{
+        height: 70%;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
         
+    }
+    .ground {
+        position: absolute;
+        bottom: 47%;
+        left: 0;
+        width: 100%;
+        height: 10px; /* Height of the ground */
+        background-color: #333; /* Grass color */
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5); /* Shadow for depth */
+    }
+    .fbt{
+        position: absolute;
+        display: flex;
+        flex-direction: column;
+        bottom: 10%;
+        width: 100%;
+        height: 10%;
+        background-color:transparent;
+    }
+    #startbtn{
+        font-size: x-large;
+        color: white;
+    }
+    #startgbtn{
+        width: 10%;
+        height: 30%;
+        margin-left: 45%;
+        background-color: #ffffff;
+        cursor: pointer;
+        margin: none;
+        outline: none;
+    }
+    #cat{
+        position: absolute;
+        bottom: 45%;
+        left: 10%;
+        transition: transform 0.2s;
+    }
+    .obstacle {
+        position: absolute;
+        bottom: 48%;
+        width: 40px;
+        height: 40px;
+        background-color: #333;
+        right: -50px;
+        animation: moveObstacle 2s linear infinite;
+    }
+    @keyframes moveObstacle {
+        from { right: -50px; }
+        to { right: 100%; }
+    }
+}
+
+@media (max-width: 480px) {
+
+}
