Small Bug Fixed

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -51,7 +51,7 @@
                 <!-- Eye -->
                 <rect x="16" y="8" width="1" height="1" fill="#FFF" />
                 <!-- Nose -->
-                <rect x="17" y="9" width="1" height="1" fill="#FFF" />
+                <rect x="17" y="9" width="1" height="1" fill="#333" />
                 <!-- Tail -->
                 <path d="M6 12 Q3 11, 4 8" stroke="#333" stroke-width="1.5" fill="none" />
                 <!-- Legs -->
