--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -93,7 +93,7 @@
             const result = await response.json();
 
             if(result==='Done'){
-                window.location.href='/user'
+                window.location.href='/login'
             }
         })
 
