--- a/views/userpage.ejs
+++ b/views/userpage.ejs
@@ -17,6 +17,10 @@
         </nav>
     </header>
     <div class="tooltip" id="tooltip" style="display: none;"></div>
+    <div class="for_share">
+        <span class="copy-text" id="textToCopy"></span>
+        <button class="copy-button" >Copy</button>
+    </div>
 
     <main id="editor" style="background-color: <%= css === 'No' ? '#ffffff' : css %>;">
         <% if (html === 'No') { %>
