--- a/views/userpage.ejs
+++ b/views/userpage.ejs
@@ -18,11 +18,13 @@
     </header>
     <div class="tooltip" id="tooltip" style="display: none;"></div>
     <div class="container">
-        <label>Your Portfolio is Live at this URL. Copy it and Share</label>
+        <label>Your Portfolio is Live at this URL, Just copy and Share.</label>
         <div class="for_share">
         <span class="copy-text" id="textToCopy">https://example.com/your-portfolio</span>
         <button class="copy-button" onclick="copyText()">Copy</button>
         </div>
+        <br>
+        <label>It is the workspace for Your Portfolio</label>
     </div>
 
     <main id="editor" style="background-color: <%= css === 'No' ? '#ffffff' : css %>;">
