--- a/views/home.ejs
+++ b/views/home.ejs
@@ -18,7 +18,9 @@
         </div>
     </div>
     <div class="smallscreen" style="display: none;">
-        <p>Oops! Not Supported For Your device Width</p>
+        <div class="error">
+            <p id="error"></p>
+        </div>
         <div class="emoji">
             <svg
             xmlns="http://www.w3.org/2000/svg"
