--- a/public/home.css
+++ b/public/home.css
@@ -196,12 +196,25 @@
         background-color: black;
         z-index: 1000;
     }
-    .smallscreen p{
+    .error{
+        position: absolute;
+        top: 0;
+        left: 1%;
+        height: 20%;
+        width: 90%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .error p{
         text-align: center;
         font-size: 20px;
+        color: #08f34e;
     }
     .emoji{
-        margin-left: 35%;
+        position: absolute;
+        left: 35%;
+        top: 15%;
     }
     .game{
         height: 70%;
