--- a/views/userpage.ejs
+++ b/views/userpage.ejs
@@ -11,6 +11,7 @@
         <nav>
             <button id="addText">Add Text Field</button>
             <button id="addImage">Add Image Field</button>
+            <input type="file" id="imageUpload" style="display: none;">
             <button id="Savebtn">Save</button>
             <button id="logoutbtn">Logout</button>
             <input type="color" id="bgcolor">
